--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/geojson": "^7946.0.14",
     "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.7",
+    "chakra-react-select": "^5.0.2",
     "d3": "^7.9.0",
     "date-fns": "^3.3.1",
     "deck.gl": "^8.9.34",
