--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.2.4",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
+    "svgo": "^3.3.2",
     "ts-jest": "^29.1.2",
     "typescript": "*",
     "util": "^0.12.3",
