--- a/.github/workflows/deploy-gh.yml
+++ b/.github/workflows/deploy-gh.yml
@@ -8,6 +8,7 @@ on:
 env:
   PUBLIC_URL: ${{ vars.PUBLIC_URL }}
   DATA_API: ${{ vars.DATA_API }}
+  MAPBOX_TOKEN: ${{ vars.MAPBOX_TOKEN }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
