--- a/.parcelrc
+++ b/.parcelrc
@@ -1,4 +1,5 @@
 {
   "extends": ["@parcel/config-default"],
-  "reporters": ["...", "@parcel/reporter-bundle-analyzer"]
+  "reporters": ["...", "@parcel/reporter-bundle-analyzer"],
+  "resolvers": ["parcel-resolver-ignore", "..."]
 }
