--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@parcel/optimizer-data-url": "2.13.2",
     "@parcel/reporter-bundle-analyzer": "^2.11.0",
     "@parcel/reporter-bundle-buddy": "^2.11.0",
+    "@parcel/transformer-inline-string": "2.13.2",
     "@tanstack/eslint-plugin-query": "^5.62.1",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.2.0",
@@ -36,6 +38,7 @@
     "assert": "^2.0.0",
     "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "del": "^7.1.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -56,31 +59,35 @@
     "portscanner": "^2.2.0",
     "posthtml-expressions": "^1.11.3",
     "prettier": "^3.2.4",
-    "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "svgo": "^3.3.2",
     "ts-jest": "^29.1.2",
     "typescript": "*",
     "util": "^0.12.3",
+    "vm-browserify": "^1.1.2",
     "watcher": "^2.3.1"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.9.3",
-    "@deck.gl/core": "^8.9.34",
-    "@deck.gl/mapbox": "^8.9.34",
+    "@deck.gl/core": "^9.0.0",
+    "@deck.gl/mapbox": "^9.0.0",
     "@devseed-ui/collecticons-chakra": "^3.0.3",
     "@dsnp/parquetjs": "^1.8.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@geoarrow/deck.gl-layers": "^0.3.0-beta.17",
+    "@geoarrow/geoarrow-js": "^0.3.1",
+    "@hscmap/healpix": "^1.4.12",
     "@tanstack/react-query": "^5.62.2",
     "@types/d3": "^7.4.3",
     "@types/geojson": "^7946.0.14",
     "@types/mapbox-gl": "^2.7.20",
+    "apache-arrow": "^15",
     "axios": "^1.6.7",
     "chakra-react-select": "^5.0.2",
     "d3": "^7.9.0",
     "date-fns": "^3.3.1",
-    "deck.gl": "^8.9.34",
+    "deck.gl": "^9.0.0",
     "framer-motion": "^11.11.0",
     "mapbox-gl": "^3.1.2",
     "polished": "^4.3.1",
