--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@geoarrow/geoarrow-js": "^0.3.1",
     "@hscmap/healpix": "^1.4.12",
     "@tanstack/react-query": "^5.62.2",
+    "@turf/bbox": "^7.2.0",
     "@types/d3": "^7.4.3",
     "@types/geojson": "^7946.0.14",
     "@types/mapbox-gl": "^2.7.20",
@@ -119,5 +120,8 @@
   "@parcel/resolver-default": {
     "packageExports": true
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.6.0",
+  "resolutions": {
+    "@geoarrow/geoarrow-js": "portal:/Users/daniel/guts/projects/geoarrow-js"
+  }
 }
