--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "react-cool-dimensions": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.7",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "threads": "^1.7.0",
     "use-pan-and-zoom": "^0.6.5",
     "wouter": "^3.3.5"
