--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ APP_DESCRIPTION=GFTS point cloud
 #MAPBOX_TOKEN=
 
 #DATA_API=''
+REACT_APP_KEYCLOAK_URL
+REACT_APP_KEYCLOAK_REALM
+REACT_APP_KEYCLOAK_CLIENT_ID
