--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/eslint-plugin-query": "^5.62.1",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.2.0",
+    "@types/keycloak-js": "^3.4.1",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -92,6 +93,7 @@
     "date-fns": "^3.3.1",
     "deck.gl": "^9.0.0",
     "framer-motion": "^11.11.0",
+    "keycloak-js": "26.1.5",
     "mapbox-gl": "^3.1.2",
     "polished": "^4.3.1",
     "react": "^18.2.0",
